src/k3s/manifests/booking.yaml
---
#----Deployment----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-deployment
  labels: 
    app: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
        - name: booking
          image: s21laneryel/booking-service:v2.0
          ports:
            - containerPort: 8083
---
#----Service----
apiVersion: v1
kind: Service
metadata:
  name: booking-service 
spec:
  selector:
    app: booking
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
