src/k3s/manifests/gateway.yaml
---
#----Deployment----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels: 
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: s21laneryel/gateway-service:v2.0
          ports:
            - containerPort: 8087
---
#----Service----
apiVersion: v1
kind: Service
metadata:
  name: gateway-service 
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8087
      targetPort: 8087
