src/k3s/manifests/hotel.yaml
---
#----Deployment----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-deployment
  labels: 
    app: hotel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel
  template:
    metadata:
      labels:
        app: hotel
    spec:
      containers:
        - name: hotel
          image: s21laneryel/hotel-service:v2.0
          ports:
            - containerPort: 8082
---
#----Service----
apiVersion: v1
kind: Service
metadata:
  name: hotel-service 
spec:
  selector:
    app: hotel
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
