src/k3s/manifests/loyalty.yaml
---
#----Deployment----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loyalty-deployment
  labels: 
    app: loyalty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loyalty
  template:
    metadata:
      labels:
        app: loyalty
    spec:
      containers:
        - name: loyalty
          image: s21laneryel/loyalty-service:v2.0
          ports:
            - containerPort: 8085
---
#----Service----
apiVersion: v1
kind: Service
metadata:
  name: loyalty-service 
spec:
  selector:
    app: loyalty
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
