src/k3s/manifests/payment.yaml
---
#----Deployment----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  labels: 
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: s21laneryel/payment-service:v2.0
          ports:
            - containerPort: 8084
---
#----Service----
apiVersion: v1
kind: Service
metadata:
  name: payment-service 
spec:
  selector:
    app: payment
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
