src/k3s/manifests/rabbitmq.yaml
---
#----Deployment----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  labels: 
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - containerPort: 5672
            - containerPort: 15672
          livenessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "check_running"]
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "check_running"]
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 10         

---
#----Service----
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  ports:
    - name: r1
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: r2  
      protocol: TCP
      port: 15672
      targetPort: 15672
