src/k3s/manifests/report.yaml
---
#----Deployment----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-deployment
  labels: 
    app: report
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report
  template:
    metadata:
      labels:
        app: report
    spec:
      containers:
        - name: report
          image: s21laneryel/report-service:v2.0
          ports:
            - containerPort: 8086
---
#----Service----
apiVersion: v1
kind: Service
metadata:
  name: report-service 
spec:
  selector:
    app: report
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
