src/k3s/manifests/session.yaml
---
#----Deployment----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-deployment
  labels: 
    app: session
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session
  template:
    metadata:
      labels:
        app: session
    spec:
      containers:
        - name: session
          image: s21laneryel/session-service:v2.0
          ports:
            - containerPort: 8081
---
#----Service----
apiVersion: v1
kind: Service
metadata:
  name: session-service 
spec:
  selector:
    app: session
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
